Feb 19, 2008 - chris
o added a macro HAM_CALLCONV to set the calling convention; per default, 
	it's empty and therefore CDECL is used

Feb 10, 2008 - chris
o added a new internal function ham_cursor_get_database

Jan 25, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.0

Jan 24, 2008 - chris
o added documentation fixes in the tutorial and the header files
o API change: added an additional parameter to the comparison-callback 
    functions

Jan 08, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.0rc1

Jan 08, 2008 - chris
o bugfix: when inserting with ham_cursor_insert, but the insert fails (i.e.
    because the key already exists), the cursor is modified and uninitialized,
    but it should still point to the same element as before the operation

Jan 06, 2008 - chris
o bugfix: when uncoupling a cursor, sometimes the connection between page
    and cursor was broken

Jan 02, 2008 - chris
o API change for ham_env_close: if you call ham_env_close and there are still
    open Databases, the function will no longer fail with HAM_ENV_NOT_EMPTY; 
    instead, the Databases are closed with ham_close; you still have to
    close the Cursors of each Database, though.
o API change for ham_close: if you call ham_close and there are still
    open Cursors, the function will no longer fail with HAM_DB_NOT_EMPTY; 
    instead, the Cursors are invalidated, but you still have to call 
    ham_cursor_close to prevent memory leaks. Alternatively, the flag
    HAM_AUTO_CLEANUP implicitely calls ham_cursor_close on each function.

Jan 01, 2008 - chris
o calling ham_set_prefix_compare_func with NULL as a function pointer
    does no longer set the default prefix compare function, but completely
    disables prefix comparison

Dec 31, 2007 - chris
o Most errors now emit a ham_trace debug messages, esp. HAM_INV_PARAMETER;