@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = hamsterdb
-PROJECT_NUMBER         = 1.0.0
+PROJECT_NUMBER         = 1.0.1
 OUTPUT_DIRECTORY       = documentation
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
